--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
       </p>
 
       <a href="sample" class="btn btn-water"><%- t('sample_link')%></a>
+      <a href="sizeExample" class="btn btn-water"><%- t('size_link')%></a>
     </section>
   </div>
 </div>
